--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-resource": "1.0.1",
-    "vuex": "^2.5.0"
+    "vuex": "^2.5.0",
+    "echarts": "^3.8.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
