--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-resource": "1.0.1",
     "vuex": "^2.5.0",
     "echarts": "^3.8.5",
-    "vue-mobile-calendar": "2.0.0"
+    "vue-mobile-calendar": "2.0.0",
+    "better-scroll": "1.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
